add a results header

--- a/src/content/work/design-systems.mdx
+++ b/src/content/work/design-systems.mdx
@@ -77,6 +77,8 @@ At the time, Jeremy Keith and the Clearleft team's writing about establishing a 
 - Cues and examples of accessibility considerations for specific UI patterns
 - A project showcase documenting extended components created with Stackup UI
 
+### Results
+
 Fast forward a few years and the three of us have successfully compiled a beautiful set of tested, documented components and introduced a client-side development style that is employed for almost every one of the company's greenfield projects since 2020.
 
 These days, our colleagues are routinely shipping consistent, high-quality UI work, and complete end-to-end features without intervention. Staffing changes on projects are more easily managed now that we have a shared approach, and we're receiving regular feedback that the system is helping to demystify UI from engineers specializing in backend development.
