front end -> front-end

--- a/src/content/work/criterion.mdx
+++ b/src/content/work/criterion.mdx
@@ -102,7 +102,7 @@ import videoCriterionMP4Slideshow from 'assets/video/criterion/slideshow.mp4'
 
 Between 2017 and 2018, I worked as a full stack developer helping to launch and maintain the first redesign of <Link to="https://criterion.com">criterion.com</Link> in over a decade.
 
-As part of a small team hired to pick up the work left by a departing agency, we inherited a set of static front end templates and a partially-completed Laravel CMS designed to accommodate a custom publishing workflow.
+As part of a small team hired to pick up the work left by a departing agency, we inherited a set of static front-end templates and a partially-completed Laravel CMS designed to accommodate a custom publishing workflow.
 
 Our task was to determine how much work remained, complete the outstanding development required for launch, and most importantly, to create a transparent project management approach that would re-establish the client's trust and shepherd them through the process.
 
@@ -117,10 +117,10 @@ Working in a small team with a lot of scope to tackle, I had a wide set of respo
 - Shipping major features including
   - homepage (CMS integration)
   - high-traffic Flash Sale pages (front-end and CMS integration)
-  - order editing and cancellation for both users and admins (front end and backend)
+  - order editing and cancellation for both users and admins (front-end and backend)
   - CSV reporting
   - URL migrations
-  - a whole bunch of front end bug fixes and enhancements
+  - a whole bunch of front-end bug fixes and enhancements
 
 </Markdown>
 
