"front end" for nouns, "front-end" for adjectives

--- a/src/content/work/criterion.mdx
+++ b/src/content/work/criterion.mdx
@@ -116,8 +116,8 @@ Working in a small team with a lot of scope to tackle, I had a wide set of respo
 - Knowledge transfer with the previous development team to understand the project's architecture, technical decisions, and tech debt
 - Shipping major features including
   - homepage (CMS integration)
-  - high-traffic Flash Sale pages (front-end and CMS integration)
-  - order editing and cancellation for both users and admins (front-end and backend)
+  - high-traffic Flash Sale pages (front end and CMS integration)
+  - order editing and cancellation for both users and admins (front end and backend)
   - CSV reporting
   - URL migrations
   - a whole bunch of front-end bug fixes and enhancements
