--- a/src/content/work/design-systems.mdx
+++ b/src/content/work/design-systems.mdx
@@ -31,9 +31,9 @@ import videoDSMP4StackupUI from 'assets/video/design-systems/stackup-ui.mp4'
 
 <Markdown>
 
-I've been excited to see the steady adoption of design systems over the last few years, and especially heartened by the emergence of <Link to="https://www.designbetter.co/design-engineering-handbook">_design engineering_</Link> as a crucial role in many organizations.
+I've been excited to see the steady adoption of design systems over the last few years, and especially heartened by the emergence of <Link to="https://www.designbetter.co/design-engineering-handbook">_design engineering_</Link> as a crucial discipline in many organizations.
 
-Below are a few examples of design systems I have implemented in the form of component libraries and living styleguides, all of which have paid tremendous dividends in development time, UI resiliency, and developer empowerment.
+Below are a few examples of design systems I have implemented ranging from fully-documented component libraries to living styleguides, all of which have paid tremendous dividends in development time, UI resiliency, and developer empowerment.
 
 ## Stackup UI
 </Markdown>
@@ -63,7 +63,7 @@ This project was the result of a collaboration between myself and two colleagues
 
 ### The problem
 
-While every engineer at Promptworks specializes in certain disciplines, they all contribute at a full-stack level on each project, building and shipping features from end-to-end.
+While every engineer at Promptworks specializes in certain disciplines, they all contribute at a full-stack level on each project, building and shipping features from end to end.
 
 A common refrain often expressed by teammates during retrospective meetings was:
 
