--- a/src/content/work/product-development.mdx
+++ b/src/content/work/product-development.mdx
@@ -50,7 +50,7 @@ Between 2014 and 2015 I led a newly-established Product Development team at <Lin
 
 Feeling constrained by traditional time tracking approaches, and struggling to adopt a unified system for reporting, we were looking to find a way to collect better data about everyone's workload without making the reporting process feel like a chore.
 
-## Problem Identification and User Research
+## Definition and User Research
 
 The first phase of our product development cycle was centered around clearly defining and validating our problem through user research. Working within a <Link to="http://theleanstartup.com/">Lean Startup</Link> methodology, we conducted extensive interviews across each team, uncovering personal workflows and pain points for both employees and managers. We used this data to identify the reasons why our current tools were failing and define success factors for our own work.
 
@@ -115,6 +115,7 @@ Unfortunately, the product team's progress was cut short, as the explosive growt
 - Early course-correction was a frequent occurrence — we set our own expectations around the volatile nature of early product work, and we didn't hesistate to tear down and pursue new directions when necessary.
 - The ideas that came out of a rigorous research process routinely won support over those that didn't. We proved to ourselves that deep understanding of a problem space resulted in our strongest thinking, and we tested that idea through pitches, focus groups, and anonymous feedback.
 - Momentum was both the most powerful and the most underestimated force we encountered. With buy-in from management and a consistently allocated team, we shipped quickly and made fast progress, but once we found ourselves routinely competing for resources inside the company, momentum slowed and rendered effective work difficult.
+
 </Markdown>
 
 </PostColumn>
