--- a/src/content/work/remedy-plan.mdx
+++ b/src/content/work/remedy-plan.mdx
@@ -135,7 +135,7 @@ A microbiologist by day, Remedy Plan CEO Greg Crimmins had been working to form 
 
 While chatting about it one day, Greg mentioned that he was considering crowdfunding as a last-ditch effort to raise enough seed money to give himself a year-long runway. Having just left a position developing new products and building large-scale ad campaigns for a <Link to="https://www.google.com/search?q=istrategylabs">local agency</Link>, I immediately signed on to help.
 
-Over the next year, our four-person team worked to develop pitches, business plans, communication strategies, and the Remedy Plan identity — ultimately launching a crowdfunding campaign that raised over $100k in 30 days and allowing Greg to pursue this work full-time.
+Over the next year, our four-person team worked to develop pitches, business plans, communication strategies, and the Remedy Plan identity — ultimately launching a crowdfunding campaign that raised over $100k in 30 days and allowing Greg to pursue this work full time.
 
 </Markdown>
 
