punctuation and consistent captions

--- a/src/content/work/criterion.mdx
+++ b/src/content/work/criterion.mdx
@@ -114,7 +114,7 @@ Working in a small team with a lot of scope to tackle, I had a wide set of respo
 - Planning and performing a content migration from the old site to our new system
 - Interviewing the Criterion team to understand each department's content and editorial workflows and gather requirements for outstanding features
 - Knowledge transfer with the previous development team to understand the project's architecture, technical decisions, and tech debt
-- Shipping major features including
+- Shipping major features including:
   - homepage (CMS integration)
   - high-traffic Flash Sale pages (front end and CMS integration)
   - order editing and cancellation for both users and admins (front end and backend)
