--- a/src/content/work/design-systems.mdx
+++ b/src/content/work/design-systems.mdx
@@ -49,7 +49,7 @@ Below are a few examples of design systems I have implemented ranging from fully
   </List>
 </Stack>
 
-<Browser>
+<Browser description="Documentation created for Stackup UI, Promptworks' internal design system.">
   <Video autoPlay loop muted>
     <source src={videoDSMP4StackupUI} type="video/mp4" />
   </Video>
@@ -71,7 +71,7 @@ A common refrain often expressed by teammates during retrospective meetings was:
 
 One of the wonderful things about the Promptworks team is a shared desire to "do it right", and my colleagues identified a point of friction between that goal and the reality of shipping timely, cost-effective work for our clients.
 
-At the time, Jeremy Keith and the Clearleft team's writing about establishing a <Link to="https://clearleft.com/posts/design-systems">_gestalt_</Link> was really resonating with me, and I proposed the idea of creating a shared design system with the following goals:
+At the time, Jeremy Keith and the Clearleft team's writing about establishing a <Link to="https://clearleft.com/posts/design-systems">_gestalt_</Link> was really resonating with me, and I proposed the idea of creating a shared design system with the following elements:
 - A library of common UI elements with consistent markup, flexible styling, and built-in accessibility baselines
 - Documentation for complex elements, identifying various design recommendations and outlining the team's rationale
 - Cues and examples of accessibility considerations for specific UI patterns
@@ -104,7 +104,7 @@ Value for our clients has dramatically increased as well, since we're able to av
   </List>
 </Stack>
 
-<Browser>
+<Browser  description="A component library featuring sample code and technical documentation, built with Fractal.">
   <Video autoPlay loop muted>
     <source src={videoDSMP4Integrity} type="video/mp4" />
   </Video>
@@ -139,7 +139,7 @@ For sites featuring less interactivity and relatively static design elements, li
   </List>
 </Stack>
 
-<Browser collapse={true} description="Living styleguide created for Promptworks">
+<Browser collapse={true} description="A living styleguide created for promptworks.com.">
   <Still
     src={imageDesktopDSPromptworks}
     alt="Screenshot: A living styleguide for Promptworks"
@@ -160,7 +160,7 @@ For sites featuring less interactivity and relatively static design elements, li
   </List>
 </Stack>
 
-<Browser description="Living styleguide created for SCTE">
+<Browser description="A living styleguide created for SCTE.">
   <Still
     src={imageDesktopDSSCTE}
     alt="Screenshot: A living styleguide for SCTE"
@@ -183,14 +183,14 @@ For sites featuring less interactivity and relatively static design elements, li
   </List>
 </Stack>
 
-<Browser description="Living styleguide created for Roxborough, Philadelphia">
+<Browser description="A living styleguide created for the neighborhood of Roxborough, in northwest Philadelphia.">
   <Still
     src={imageDesktopDSRoxborough}
     alt="Screenshot: A living styleguide for Roxborough, Philadelphia"
   />
 </Browser>
 
-<Browser description="Living styleguide created for The Green Program">
+<Browser description="A living styleguide created for The Green Program.">
   <Still
     src={imageDesktopDSGreenProgram}
     alt="Screenshot: A living styleguide for The Green Program"
