--- a/src/content/work/national-geographic.mdx
+++ b/src/content/work/national-geographic.mdx
@@ -104,7 +104,7 @@ The result was a more visually consistent, semantic, search-friendly, and access
 
 </Markdown>
 
-<Browser description="I created a custom layout system for the site’s content producers, which allowed them to keep pages tight and visually consistent while still ensuring a high level of customization.">
+<Browser description="A custom layout system for the site’s content producers, which allowed them to keep pages tight and visually consistent while still ensuring a high level of customization.">
   <Still
     src={imageDesktopNGLayoutManager}
     alt="Screenshot: A view of the custom layout manager powering the nationalgeographic.com homepage in 2010"
