--- a/src/content/work/product-development.mdx
+++ b/src/content/work/product-development.mdx
@@ -46,7 +46,7 @@ import videoProductMP4Interface from 'assets/video/product/v2-demo.mp4'
 
 <Markdown>
 
-Between 2014 and 2015 I led a newly-established Product Development team at <Link to="https://isl.co/">ISL</Link>, with the goal of building marketable tools to better understand workload and project status across teams.
+Between 2014 and 2015 I led a newly-established Product Development team at <Link to="https://www.google.com/search?q=istrategylabs">ISL</Link>, with the goal of building marketable tools to better understand workload and project status across teams.
 
 Feeling constrained by traditional time tracking approaches, and struggling to adopt a unified system for reporting, we were looking to find a way to collect better data about everyone's workload without making the reporting process feel like a chore.
 
@@ -57,7 +57,7 @@ The first phase of our product development cycle was centered around clearly def
 </Markdown>
 
 <Still
-  description="Research materials generated during product planning phases"
+  description="Research materials generated during product planning phases."
   src={imageStillProductPlanning}
   alt="Photo: Collage of research conducted during product planning phases"
 />
@@ -83,7 +83,7 @@ Once we had a solid understanding of our problem, the user base, and an initial 
 </Markdown>
 
 <Still
-  description="A hi-fidelity mockup of the first product iteration's menubar interface"
+  description="A hi-fidelity mockup of the first product iteration's menubar interface."
   src={imageStillProductV1Menu}
   alt="Screenshot: Hi-fidelity mockup of the v1 interface"
 />
@@ -99,7 +99,7 @@ Following unanimous approval, a small team was assembled and we began building a
     autoPlay
     loop
     muted
-    description="An animated mockup of the second iteration, demoing interactions"
+    description="An animated mockup of the second product iteration, demonstrating a proposed workflow and user experience."
   >
     <source src={videoProductMP4Interface} type="video/mp4" />
   </Video>
