--- a/src/content/work/redds.mdx
+++ b/src/content/work/redds.mdx
@@ -16,6 +16,7 @@ import Still from 'components/Still'
 import PostColumn from 'components/PostColumn'
 import Markdown from 'components/Markdown'
 import List from 'components/List'
+import Link from 'components/Link'
 import { Element as ListItem } from 'components/ListItem'
 import Stack from 'components/Stack'
 
@@ -135,7 +136,7 @@ Recognizing this as an opportunity to improve our own server provisioning proces
 
 <Still
   src={imageStillReddsSystemDiagram}
-  description="A system diagram for the Redd's tech stack, detailing how each component communicates with one another"
+  description="A system diagram for the Redd's tech stack, detailing how each component communicates with one another."
   alt="Diagram: System Diagram outlining the Redd's Technical Flow."
 />
 
@@ -143,7 +144,7 @@ Recognizing this as an opportunity to improve our own server provisioning proces
 
 ## Outcomes
 
-This project kickstarted a new era for ISL and defined the company's work for years afterward. Real-time interactive marketing campaigns were suddenly possible, we had a tech workflow and infrastructure to support projects at an enormous scale, and most importantly — the team saw just how capable we were together, and that it was possible for us to create something brand new by developing the skills we needed along the way.
+This project kickstarted a new era for <Link to="https://www.google.com/search?q=istrategylabs">ISL</Link> and defined the company's work for years afterward. Real-time interactive marketing campaigns were suddenly possible, we had a tech workflow and infrastructure to support projects at an enormous scale, and most importantly — the team saw just how capable we were together, and that it was possible for us to create something brand new by developing the skills we needed along the way.
 
 </Markdown>
 
