--- a/src/content/work/remedy-plan.mdx
+++ b/src/content/work/remedy-plan.mdx
@@ -34,7 +34,7 @@ import imageStillIdentity from 'assets/images/remedy-plan/still/identity.gif'
 <Gallery>
   <GalleryItem>
     <Still
-      description="Logos and branding examples, featuring a moonshot-inspired color palette"
+      description="Logos and branding examples, featuring a moonshot-inspired color palette."
       src={imageStillIdentity}
       alt="Graphic: Remedy Plan branding compilation" />
   </GalleryItem>
@@ -52,7 +52,7 @@ import imageStillIdentity from 'assets/images/remedy-plan/still/identity.gif'
 <GalleryItem>
   <Browser>
     <Still
-      description="The first version of the remedyplan.com homepage"
+      description="The first version of the remedyplan.com homepage."
       src={imageDesktopV1Home}
       alt="Screenshot: The first iteration of the remedyplan.com homepage"
     />
@@ -72,7 +72,7 @@ import imageStillIdentity from 'assets/images/remedy-plan/still/identity.gif'
 <GalleryItem>
   <Browser>
     <Still
-      description="A page from the second version of remedyplan.com"
+      description="A page from the second version of remedyplan.com."
       src={imageDesktopV2Team}
       alt="Screenshot: The team page on the second iteration of remedyplan.com"
     />
@@ -139,7 +139,7 @@ Over the next year, our four-person team worked to develop pitches, business pla
 
 </Markdown>
 
-<Browser description="Remedy Plan's first seed round, raised over 30 days on Indiegogo">
+<Browser description="Remedy Plan's first seed round, raised over 30 days on Indiegogo.">
   <Still
     src={imageDesktopIndiegogo}
     alt="Screenshot: Remedy Plan's completed campaign page on Indiegogo"
@@ -189,7 +189,7 @@ As of 2022, Remedy Plan has raised $10.1M in Series A funding, is currently purs
 
 </Markdown>
 
-<Browser description="Remedyplan.com version 2, launched in May 2018">
+<Browser description="Remedyplan.com version 2, launched in May 2018.">
   <Still
     src={imageDesktopV2Full}
     alt="Screenshot: The full homepage of the second iteration of remedyplan.com"
