--- a/src/content/work/design-systems.mdx
+++ b/src/content/work/design-systems.mdx
@@ -57,7 +57,7 @@ Below are a few examples of design systems I have implemented ranging from fully
 
 <Markdown>
 
-<p><Link to="https://stackup-ui.promptworks.com/">Stackup UI</Link> is an internal design system created at <Link to="https://promptworks.com">Promptworks</Link>, aimed at helping engineers build web and mobile apps with consistent, accessible, and resilient UI.</p>
+<p><Link to="https://stackup-ui.netlify.app/">Stackup UI</Link> is an internal design system created at <Link to="https://promptworks.com">Promptworks</Link>, aimed at helping engineers build web and mobile apps with consistent, accessible, and resilient UI.</p>
 
 This project was the result of a collaboration between myself and two colleagues: a design/ux lead and an engineer responsible for the company's internal scaffolding tool (Stackup).
 
